Fixed z-index problem

--- a/bonus/assets/css/bonus-style.css
+++ b/bonus/assets/css/bonus-style.css
@@ -17,9 +17,7 @@ body{
 div.contenitore{
     width: 70%;
     margin: auto;
-    height: 100%;
-    position:relative;
- 
+    height: 100%; 
 }
 .h2-dim{
     font-size: 2.4rem;
@@ -189,41 +187,113 @@ header>.second-nav{
     color:#617280;
 }
             /* ----BONUS---- */
-.dropdown {
+            
+#nav_2_right a {
  position: relative;
  display: inline-block;
  }
-              
-.dropdown-content {
-    position: absolute;
-    right: 0;
-    top:2rem;
-    min-width: 20rem;
-    display: none;
-    z-index: 1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    background-color: white;
-    border: 1px solid #c9d6e1;
-    border-radius: 5px;
-}
 
-.dropdown-content .cartelle{
-    float:left;
-    margin-right: 1rem;
-    width: calc(100% / 3 - 2rem/3);
-    padding: 2rem 2rem 1rem 2rem;
-  
-}
-.dropdown-content  .cartelle:last-of-type{
-    margin-right: 0;
-}
-.dropdown-content  .cartelle p{
-    padding-bottom: 1rem;
-}
-  
-.dropdown:hover ~.dropdown-content {
-    display: block;
-  }
+
+        /* BONUS resources */
+
+
+
+
+
+
+
+
+
+        /* /BONUS resources */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        /* BONUS PARTNERS */
+
+        .content-partners {
+            position: absolute;
+            right: 0;
+            top:2rem;
+            min-width: 45rem;
+            display: none;
+            z-index: 2;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            background-color: white;
+            border: 1px solid #c9d6e1;
+            border-radius: 5px;
+        }
+        
+        .content-partners  .box-partners{
+            float:left;
+            width: 50%;
+            padding: 2rem 2rem 1rem 2rem;
+          
+        }
+        .content-partners  .box-partners:last-of-type{
+            margin-right: 0;
+        }
+        .content-partners   .box-partners li{
+            padding-bottom: 0.5rem;
+        }
+     
+        .content-partners ul{
+            list-style: none;
+        }
+        #partners:hover ~.content-partners {
+            display: block;
+          }
+
+
+        /* /BONUS PARTNERS */
+
+
+        /* BONUS ABOUT        */
+    .content-about {
+        position: absolute;
+        right: 0;
+        top:2rem;
+        min-width: 20rem;
+        display: none;
+        z-index: 1;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        background-color: white;
+        border: 1px solid #c9d6e1;
+        border-radius: 5px;
+    }
+
+    .content-about .box-about{
+        float:left;
+        margin-right: 1rem;
+        width: calc(100% / 3 - 2rem/3);
+        padding: 2rem 2rem 1rem 2rem;
+    
+    }
+    .content-about  .box-about:last-of-type{
+        margin-right: 0;
+    }
+    .content-about  .box-about li{
+        padding-bottom: 0.5rem;
+    }
+
+    .content-about ul{
+        list-style: none;
+    }
+    
+#about:hover ~.content-about {
+        display: block;
+    }
 
  /* ----/BONUS---- */
 
